# EE6470-ESL-design-and-synthesis

./: README.md
cmake-4.0.0-rc2-linux-x86_64/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
cmake-4.0.0-rc2-linux-x86_64/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-configure-log.7  (+19 more)
final/: README.md  report.docx
final/riscv-vp/: README.md
final/riscv-vp/vp/src/platform/tiny32-mc-final/: CMakeLists.txt  PE_Add1.cpp  PE_Add1.h  mc_main.cpp
final/riscv-vp/vp/src/platform/tiny32_1core/: CMakeLists.txt  PE_Add1.cpp  tiny32_main.cpp
final/riscv-vp/vp/src/platform/tiny32_2core/: CMakeLists.txt  PE_Add1.cpp  PE_Add1.h  dma.h  fe310_plic.h  tiny32_main.cpp
final/riscv-vp/vp/src/platform/tiny32_4core/: CMakeLists.txt  PE_Add1.cpp  tiny32_main.cpp
hw1/: README.md  compare.py
hw1/SW/: LoG.py  README.md
hw1/part1/: CMakeLists.txt  GaussianFilter.h  LaplacianFilter.cpp  README.md  Testbench.cpp  filter_def.h  main.cpp  run.sh
hw1/part2/: .nfs00000000c5a9ed7800000360  CMakeLists.txt  GaussianFilter.cpp  LaplacianFilter.cpp  LaplacianFilter.h  README.md  Testbench.cpp  filter_def.h  run.sh
hw2/: README.md
hw2/part0/: CMakeLists.txt  LaplacianFilter.cpp  LoGFilter.cpp  filter_def.h  filter_def.h.in  run.sh
hw2/part1/: LoGFilter.cpp  LoGFilter.h  Testbench.cpp  Testbench.h  filter_def.h  main.cpp
hw2/part2/: Initiator.h  Testbench.cpp  Testbench.h
hw2/part2_single_module/: GaussianFilter.cpp  LaplacianFilter.cpp  LoGFilter.h  Testbench.cpp  Testbench.h  filter_def.h.in  main.cpp
hw2/part3/: GaussianFilter.cpp  Initiator.cpp  LaplacianFilter.cpp  MemoryMap.h  SimpleBus.h  Testbench.cpp  Testbench.h  filter_def.h  filter_def.h.in  main.cpp
hw3/part1/: GaussianFilter.cpp  GaussianFilter.h  LaplacianFilter.cpp  LaplacianFilter.h  Makefile  System.h
hw3/part2/: GaussianFilter.cpp  LaplacianFilter.cpp  LaplacianFilter.h  System.cpp  main.cpp  run.sh
hw3/part3/: GaussianFilter.cpp  GaussianFilter.d  GaussianFilter.h  LaplacianFilter.cpp  Testbench.cpp  Testbench.d  Testbench.h  filter_def.h.in  main.d
hw4/vp/basic-log/: CMakeLists.txt  LaplacianFilter.cpp  filter_def.h  main.cpp
(+5999 files in other folders)
